src/objects/AccountContactRole__c.object
<CustomObject>
    <fields>
        <fullName>AccountAccessLevel__c</fullName>
        <label>AccountAccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountContactRoles</relationshipLabel>
        <relationshipName>AccountContactRoles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseAccessLevel__c</fullName>
        <label>CaseAccessLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAccessLevel__c</fullName>
        <label>ContactAccessLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AccountContactRoles</relationshipLabel>
        <relationshipName>AccountContactRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountContactRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Contact Role</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Account Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountContactRoles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>